syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional CommandResultMessage commandResultMessage = 7;
}

message CommandResultMessage {
  optional uint64 value = 1;
}