syntax = "proto2";

import "ProtocolMessage.proto";
import "VoiceInputDeviceDescriptor.proto";

extend ProtocolMessage {
  optional RegisterVoiceInputDeviceMessage registerVoiceInputDeviceMessage = 33;
}

message RegisterVoiceInputDeviceMessage {
  optional VoiceInputDeviceDescriptor deviceDescriptor = 1;
}