syntax = "proto2";

import "ProtocolMessage.proto";
import "NowPlayingInfo.proto";
import "SupportedCommands.proto";
import "PlayerPath.proto";

extend ProtocolMessage {
  optional SetStateMessage setStateMessage = 9;
}

message SetStateMessage {
  optional NowPlayingInfo nowPlayingInfo = 1;
  optional SupportedCommands supportedCommands = 2;
//  optional PlaybackQueue playbackQueue = 3;
  optional string displayID = 4;
  optional string displayName = 5;
  optional uint32 playbackState = 6;
//  optional PlaybackQueueCapabilities playbackQueueCapabilities = 8;
  optional PlayerPath playerPath = 9;
//  optional Request request = 10;
}